--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.2.22",
     "@types/react-router-dom": "*",
     "@types/sanitize-html": "*",
+    "@types/testing-library__react": "^10.2.0",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
@@ -62,6 +63,7 @@
     "@projectstorm/react-canvas-core": "^7.0.3",
     "@projectstorm/react-diagrams": "^7.0.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@testing-library/dom": "^10.4.0",
     "browser-image-compression": "*",
     "d3": "^7",
     "eslint-plugin-header": "^3.1.1",
